--- a/app/src/main/res/layout/activity_calcnumsus.xml
+++ b/app/src/main/res/layout/activity_calcnumsus.xml
@@ -103,29 +103,40 @@
             android:layout_weight="1.5"
             android:orientation="vertical">
 
-            <Button
-                android:id="@+id/btnplus"
+            <RadioGroup
+                android:id="@+id/radiogroup3"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="+" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="65dp">
 
-            <Button
-                android:id="@+id/btnminus"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="-" />
+                <RadioButton
+                    android:id="@+id/btnplus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="+"
+                    android:textSize="10sp" />
 
-            <Button
-                android:id="@+id/btnmulti"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="*" />
+                <RadioButton
+                    android:id="@+id/btnminus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="-"
+                    android:textSize="10sp" />
 
-            <Button
-                android:id="@+id/btndiv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="/" />
+                <RadioButton
+                    android:id="@+id/btndiv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="/"
+                    android:textSize="10sp" />
+
+                <RadioButton
+                    android:id="@+id/btnmulti"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="*"
+                    android:textSize="10sp" />
+            </RadioGroup>
         </LinearLayout>
 
         <LinearLayout
