--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -14,13 +14,13 @@
     <fragment
         android:id="@+id/nav_calc"
         android:name="useful.things.ui.calculator.CalcFragment"
-        android:label="@string/menu_gallery"
+        android:label="@string/menu_calc"
         tools:layout="@layout/fragment_calc" />
 
     <fragment
         android:id="@+id/nav_NumSysConv"
         android:name="useful.things.ui.numsysconv.NumSysConvFragment"
-        android:label="@string/menu_slideshow"
+        android:label="@string/menu_numsysconv"
         tools:layout="@layout/fragment_numsysconv" />
 
     <fragment
@@ -38,6 +38,6 @@
     <fragment
         android:id="@+id/nav_NumSysCalc"
         android:name="useful.things.ui.numsyscalc.NumSysCalcFragment"
-        android:label="@string/menu_send"
+        android:label="@string/menu_numsyscalc"
         tools:layout="@layout/fragment_numsyscalc" />
 </navigation>
