--- a/app/src/main/res/layout/fragment_numsyscalc.xml
+++ b/app/src/main/res/layout/fragment_numsyscalc.xml
@@ -249,5 +249,13 @@
             android:ems="10"
             android:gravity="start|top"
             android:inputType="textMultiLine" />
+
+        <EditText
+            android:id="@+id/txt3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:gravity="start|top"
+            android:inputType="textMultiLine" />
     </LinearLayout>
 </LinearLayout>
