--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#64C7FF</color>
+    <color name="colorPrimary">#2D739B</color>
     <color name="colorPrimaryDark">#4081A7</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorMainBackground">#64C7FF</color>
