--- a/app/src/main/res/layout/fragment_mathformula.xml
+++ b/app/src/main/res/layout/fragment_mathformula.xml
@@ -8,24 +8,40 @@
         android:layout_height="match_parent"
         android:fillViewport="true">
 
+    </androidx.core.widget.NestedScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <Spinner
                 android:id="@+id/spinmain"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="20dp"
+                android:layout_weight="1" />
 
             <Spinner
                 android:id="@+id/spinformula"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="20dp"
-                android:visibility="invisible" />
+                android:layout_weight="1" />
+
         </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="4"
+            android:orientation="vertical"></LinearLayout>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
